tailscale-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: tailscale-gateway
  namespace: tailscale
spec:
  gatewayClassName: tailscale
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: argocd.jarvis-home.dev
    name: argocd
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: home.jarvis-home.dev
    name: home
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: code.jarvis-home.dev
    name: code
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: longhorn.jarvis-home.dev
    name: longhorn
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: immich.jarvis-home.dev
    name: immich
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: technitium.jarvis-home.dev
    name: technitium
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tailscale-gateway-cert
      mode: Terminate
